--- a/case_net_scrape_testing.ipynb
+++ b/case_net_scrape_testing.ipynb
@@ -25,12 +25,12 @@
    "cell_type": "code",
    "execution_count": 24,
    "source": [
+    "# xPaths to each required search element in the field. \r\n",
     "district_drop_down = '//*[@id=\"courtId\"]'\r\n",
     "date_field = '//*[@id=\"inputVO.startDate\"]'\r\n",
     "seven_day_search_radio = '//*[@id=\"sevenDayRadio\"]'\r\n",
     "search_by_attorney_radio = '//*[@id=\"searchAttorneyRadio\"]'\r\n",
     "mobar_input = '//*[@id=\"inputVO.mobarNumber\"]'\r\n",
-    "\r\n",
     "submit_button = '//*[@id=\"findButton\"]'"
    ],
    "outputs": [],
@@ -40,36 +40,30 @@
    "cell_type": "code",
    "execution_count": 45,
    "source": [
+    "# create an instance of the webdriver and load the inital calendar search page\r\n",
     "driver = webdriver.Chrome(chromedriver_location)\r\n",
     "driver.get('https://www.courts.mo.gov/casenet/cases/calendarSearch.do')\r\n",
     "\r\n",
+    "# store the district dropdown in an object using Select\r\n",
     "courtDistrictDrp = Select(driver.find_element_by_xpath(district_drop_down))\r\n",
-    "courtDistrictDrp.select_by_value(\"CT11\")\r\n",
+    "courtDistrictDrp.select_by_value(\"CT11\") # 11th District Saint Charles\r\n",
     "\r\n",
+    "# date\r\n",
     "driver.find_element_by_xpath(date_field).send_keys(\"8/9/2021\")\r\n",
+    "# 7 day search results\r\n",
     "driver.find_element_by_xpath(seven_day_search_radio).click()\r\n",
+    "# search by attorney\r\n",
     "driver.find_element_by_xpath(search_by_attorney_radio).click()\r\n",
+    "# MOBAR number field \r\n",
     "driver.find_element_by_xpath(mobar_input).send_keys(\"71855\")\r\n",
     "\r\n",
-    "time.sleep(1)\r\n",
+    "# without the pause, the inputs are too fast for casenet to handle\r\n",
+    "time.sleep(1) \r\n",
     "\r\n",
+    "# submit \r\n",
     "driver.find_element_by_xpath(submit_button).click()\r\n",
     "\r\n"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
