--- a/case_net_scrape_testing.ipynb
+++ b/case_net_scrape_testing.ipynb
@@ -28,7 +28,7 @@
     "# xPaths to each required search element in the field. \r\n",
     "district_drop_down = '//*[@id=\"courtId\"]'\r\n",
     "date_field = '//*[@id=\"inputVO.startDate\"]'\r\n",
-    "seven_day_search_radio = '//*[@id=\"sevenDayRadio\"]'\r\n",
+    "#seven_day_search_radio = '//*[@id=\"sevenDayRadio\"]'\r\n",
     "search_by_attorney_radio = '//*[@id=\"searchAttorneyRadio\"]'\r\n",
     "mobar_input = '//*[@id=\"inputVO.mobarNumber\"]'\r\n",
     "submit_button = '//*[@id=\"findButton\"]'"
@@ -51,7 +51,7 @@
     "# date\r\n",
     "driver.find_element_by_xpath(date_field).send_keys(\"8/10/2021\")\r\n",
     "# 7 day search results\r\n",
-    "driver.find_element_by_xpath(seven_day_search_radio).click()\r\n",
+    "#driver.find_element_by_xpath(seven_day_search_radio).click()\r\n",
     "# search by attorney\r\n",
     "driver.find_element_by_xpath(search_by_attorney_radio).click()\r\n",
     "# MOBAR number field \r\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "source": [
     "dates = driver.find_elements_by_xpath('//td[contains(text(), \", 20\")]')"
    ],
@@ -78,27 +78,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "source": [
-    "for h in dates:\r\n",
-    "    print(h.text)"
+    "current_date = driver.find_element_by_xpath('/html/body/table/tbody/tr[2]/td/table/tbody/tr[2]/td/table/tbody/tr[1]/td/table/tbody/tr[1]/td[2]').text"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "current_date"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "August 11, 2021 - August 17, 2021\n",
-      " Wednesday, August 11, 2021\n",
-      " Thursday, August 12, 2021\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "' Monday, August 16, 2021'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "source": [
     "i=1\r\n",
     "data = []\r\n",
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "source": [
     "raw_text = []\r\n",
     "for d in data:\r\n",
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "source": [
     "def slice_per(source, step):\r\n",
     "    return [source[i::step] for i in range(step)]"
@@ -133,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "source": [
     "organized_data = slice_per(raw_text, 9)"
    ],
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "source": [
     "len(organized_data)"
    ],
@@ -155,14 +164,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "source": [
     "organized_data"
    ],
@@ -171,37 +180,214 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[['2111-CC00542  ',\n",
-       "  '1611-CR03019-01  ',\n",
-       "  '1511-FC01981-01  ',\n",
-       "  '1711-CR02411-01  '],\n",
-       " ['STEPHEN WYATT V CHESTERFIELD MUNICIPAL ET AL ',\n",
-       "  'ST V MARCOS ENRICO TRUJILLO ',\n",
-       "  'MELISSA Y HARPER V DEREK L HARPER ',\n",
-       "  'ST V JEREMY LEE BRANDT '],\n",
-       " ['9:00 AM ', '9:00 AM ', '9:00 AM ', '9:00 AM '],\n",
-       " ['1 OF 1', '1 OF 1', '1 OF 1', '1 OF 1'],\n",
-       " [' ', ' ', ' ', ' '],\n",
-       " ['Civil Setting ',\n",
-       "  'Probation Viol Hearing ',\n",
-       "  'Case Review ',\n",
-       "  'Disposition Hearing '],\n",
+       "[['1911-CR01190-01  ',\n",
+       "  '1911-CR01457-01  ',\n",
+       "  '1811-CR03256-01  ',\n",
+       "  '1911-CR02239-01  ',\n",
+       "  '1911-CR01436-01  ',\n",
+       "  '2011-CR02440-01  ',\n",
+       "  '2011-CR00723-01  '],\n",
+       " ['ST V JEFFREY CALVIN HILL ',\n",
+       "  'ST V SEAN D. GWIN ',\n",
+       "  'ST V JULIANNE MARIE POPE ',\n",
+       "  'ST V BRIAN KEITH BILLINGSLEY ',\n",
+       "  'ST V MARLA A.M. NEIL ',\n",
+       "  'ST V CARLOS L. SPANN ',\n",
+       "  'ST V JULIANNE MARIE POPE '],\n",
+       " ['8:30 AM ',\n",
+       "  '8:30 AM ',\n",
+       "  '9:00 AM ',\n",
+       "  '1:30 PM ',\n",
+       "  '8:30 AM ',\n",
+       "  '8:30 AM ',\n",
+       "  '9:00 AM '],\n",
+       " ['1 OF 1', '1 OF 1', '1 OF 1', '1 OF 1', '1 OF 1', '1 OF 1', '1 OF 1'],\n",
+       " [' ', ' ', ' ', ' ', ' ', ' ', ' '],\n",
+       " ['Plea Hearing ',\n",
+       "  'Disposition Hearing ',\n",
+       "  'Sentencing Hearing ',\n",
+       "  'Pre-trial Conference ',\n",
+       "  'Disposition Hearing ',\n",
+       "  'Arraignment ',\n",
+       "  'Plea Hearing '],\n",
        " ['Event Text:  ',\n",
        "  'Event Text:  ',\n",
-       "  'Event Text: SUBMISSION OF DOCUMENTS PROPOSED CUSTODY SCHEDULE',\n",
+       "  'Event Text:  ',\n",
+       "  'Event Text:  ',\n",
+       "  'Event Text: ',\n",
+       "  'Event Text: ',\n",
        "  'Event Text: '],\n",
-       " ['Location: DIVISION 1 COURTROOM St Charles Circuit Div',\n",
-       "  'Location: DIVISION 5 COURTROOM St Charles Circuit Div',\n",
-       "  'Location: DIVISION 3 COURTROOM St Charles Circuit Div',\n",
-       "  'Location: DIVISION 5 COURTROOM St Charles Circuit Div'],\n",
-       " ['Judge/Commissioner: REBECA NAVARRO-MCKELVEY ',\n",
-       "  'Judge/Commissioner: JON A. CUNNINGHAM ',\n",
-       "  'Judge/Commissioner: JOHN PAUL BANAS',\n",
-       "  'Judge/Commissioner: JON A. CUNNINGHAM']]"
+       " ['Location: DIVISION 4 COURTROOM St Charles Circuit Div',\n",
+       "  'Location: DIVISION 4 COURTROOM St Charles Circuit Div',\n",
+       "  'Location: DIVISION 7 COURTROOM St Charles Circuit Div',\n",
+       "  'Location: DIVISION 7 COURTROOM St Charles Circuit Div',\n",
+       "  'Location: DIVISION 4 COURTROOM St Charles Circuit Div',\n",
+       "  'Location: DIVISION 4 COURTROOM St Charles Circuit Div',\n",
+       "  'Location: DIVISION 7 COURTROOM St Charles Circuit Div'],\n",
+       " ['Judge/Commissioner: MICHAEL JAMES FAGRAS ',\n",
+       "  'Judge/Commissioner: MICHAEL JAMES FAGRAS ',\n",
+       "  'Judge/Commissioner: DANIEL G PELIKAN ',\n",
+       "  'Judge/Commissioner: DANIEL G PELIKAN ',\n",
+       "  'Judge/Commissioner: MICHAEL JAMES FAGRAS',\n",
+       "  'Judge/Commissioner: MICHAEL JAMES FAGRAS',\n",
+       "  'Judge/Commissioner: DANIEL G PELIKAN']]"
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 12
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "df = pd.DataFrame({\r\n",
+    "    \"date\" : current_date,\r\n",
+    "    \"case_num\" : organized_data[0],\r\n",
+    "    \"case_style\" : organized_data[1],\r\n",
+    "    \"time\": organized_data[2],\r\n",
+    "    \"days\": organized_data[3],\r\n",
+    "    \"event\": organized_data[5],\r\n",
+    "    \"location\": organized_data[7],\r\n",
+    "    \"judge\": organized_data[8]\r\n",
+    "})"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "df.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                       date           case_num                     case_style  \\\n",
+       "0   Monday, August 16, 2021  1911-CR01190-01        ST V JEFFREY CALVIN HILL    \n",
+       "1   Monday, August 16, 2021  1911-CR01457-01               ST V SEAN D. GWIN    \n",
+       "2   Monday, August 16, 2021  1811-CR03256-01        ST V JULIANNE MARIE POPE    \n",
+       "3   Monday, August 16, 2021  1911-CR02239-01    ST V BRIAN KEITH BILLINGSLEY    \n",
+       "4   Monday, August 16, 2021  1911-CR01436-01            ST V MARLA A.M. NEIL    \n",
+       "\n",
+       "       time    days                  event  \\\n",
+       "0  8:30 AM   1 OF 1          Plea Hearing    \n",
+       "1  8:30 AM   1 OF 1   Disposition Hearing    \n",
+       "2  9:00 AM   1 OF 1    Sentencing Hearing    \n",
+       "3  1:30 PM   1 OF 1  Pre-trial Conference    \n",
+       "4  8:30 AM   1 OF 1   Disposition Hearing    \n",
+       "\n",
+       "                                            location  \\\n",
+       "0  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
+       "1  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
+       "2  Location: DIVISION 7 COURTROOM St Charles Circ...   \n",
+       "3  Location: DIVISION 7 COURTROOM St Charles Circ...   \n",
+       "4  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
+       "\n",
+       "                                       judge  \n",
+       "0  Judge/Commissioner: MICHAEL JAMES FAGRAS   \n",
+       "1  Judge/Commissioner: MICHAEL JAMES FAGRAS   \n",
+       "2      Judge/Commissioner: DANIEL G PELIKAN   \n",
+       "3      Judge/Commissioner: DANIEL G PELIKAN   \n",
+       "4   Judge/Commissioner: MICHAEL JAMES FAGRAS  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>case_num</th>\n",
+       "      <th>case_style</th>\n",
+       "      <th>time</th>\n",
+       "      <th>days</th>\n",
+       "      <th>event</th>\n",
+       "      <th>location</th>\n",
+       "      <th>judge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Monday, August 16, 2021</td>\n",
+       "      <td>1911-CR01190-01</td>\n",
+       "      <td>ST V JEFFREY CALVIN HILL</td>\n",
+       "      <td>8:30 AM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Plea Hearing</td>\n",
+       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Monday, August 16, 2021</td>\n",
+       "      <td>1911-CR01457-01</td>\n",
+       "      <td>ST V SEAN D. GWIN</td>\n",
+       "      <td>8:30 AM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Disposition Hearing</td>\n",
+       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Monday, August 16, 2021</td>\n",
+       "      <td>1811-CR03256-01</td>\n",
+       "      <td>ST V JULIANNE MARIE POPE</td>\n",
+       "      <td>9:00 AM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Sentencing Hearing</td>\n",
+       "      <td>Location: DIVISION 7 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: DANIEL G PELIKAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Monday, August 16, 2021</td>\n",
+       "      <td>1911-CR02239-01</td>\n",
+       "      <td>ST V BRIAN KEITH BILLINGSLEY</td>\n",
+       "      <td>1:30 PM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Pre-trial Conference</td>\n",
+       "      <td>Location: DIVISION 7 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: DANIEL G PELIKAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Monday, August 16, 2021</td>\n",
+       "      <td>1911-CR01436-01</td>\n",
+       "      <td>ST V MARLA A.M. NEIL</td>\n",
+       "      <td>8:30 AM</td>\n",
+       "      <td>1 OF 1</td>\n",
+       "      <td>Disposition Hearing</td>\n",
+       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
+       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
     }
    ],
    "metadata": {}
