added ability to enter in date range

--- a/case_net_scrape_testing.ipynb
+++ b/case_net_scrape_testing.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "source": [
     "from selenium import webdriver\r\n",
     "from selenium.webdriver.support.ui import Select\r\n",
+    "from datetime import datetime\r\n",
     "import pandas as pd\r\n",
     "import time"
    ],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "source": [
     "main_df = pd.DataFrame({\r\n",
     "    \"date\" : [],\r\n",
@@ -66,16 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "source": [
-    "date_range = ['8/16/2021', '8/17/2021', '8/18/2021', '8/19/2021', '8/20/2021', '8/21/2021', '8/22/2021']"
+    "start_date = '8/16/2021' #input('Start Date(MM/DD/YYYY): ')\r\n",
+    "end_date = '9/6/2021' #input('End Date(MM/DD/YYYY): ')\r\n",
+    "# get a list of dates in the range specified\r\n",
+    "datelist = pd.date_range(start_date, end_date).tolist()\r\n",
+    "# convert the dates to the desired format mm/dd/yyyy\r\n",
+    "for i in range(len(datelist)):\r\n",
+    "    datelist[i] = datetime.strftime(datelist[i], '%m/%d/%Y')"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "source": [
     "# FORM INPUT AND SUBMIT\r\n",
     "\r\n",
@@ -90,7 +97,7 @@
     "driver.find_element_by_xpath(mobar_input).send_keys(\"71855\")\r\n",
     "\r\n",
     "\r\n",
-    "for date in date_range:\r\n",
+    "for date in datelist:\r\n",
     "    # clear the date text box\r\n",
     "    driver.find_element_by_xpath(date_field).clear()\r\n",
     "    # store the district dropdown in an object using Select\r\n",
@@ -134,307 +141,12 @@
     "    })\r\n",
     "    # add collected data to main dataframe\r\n",
     "    main_df = pd.concat([df, main_df], axis=0, join='inner')\r\n",
-    "\r\n",
+    "    main_df.drop_duplicates(inplace=True)\r\n",
     "    # go back to previous page\r\n",
-    "    driver.back()\r\n"
+    "    driver.back()\r\n",
+    "\r\n",
+    "driver.close()\r\n"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "source": [
-    "len(main_df)"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 45
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "source": [
-    "main_df"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                          date           case_num  \\\n",
-       "0    Thursday, August 19, 2021     1911-CR01411     \n",
-       "1    Thursday, August 19, 2021     2011-CR04156     \n",
-       "2    Thursday, August 19, 2021     1911-CR03589     \n",
-       "0   Wednesday, August 18, 2021  1611-CR03626-01     \n",
-       "1   Wednesday, August 18, 2021     2011-CR00837     \n",
-       "2   Wednesday, August 18, 2021     1911-CR04606     \n",
-       "0      Monday, August 16, 2021  1911-CR01190-01     \n",
-       "1      Monday, August 16, 2021  1911-CR01457-01     \n",
-       "2      Monday, August 16, 2021  1811-CR03256-01     \n",
-       "3      Monday, August 16, 2021  1911-CR02239-01     \n",
-       "4      Monday, August 16, 2021  1911-CR01436-01     \n",
-       "5      Monday, August 16, 2021  2011-CR02440-01     \n",
-       "6      Monday, August 16, 2021  2011-CR00723-01     \n",
-       "\n",
-       "                               case_style      time    days  \\\n",
-       "0                   ST V BRITTANY N ROSE   1:30 PM   1 OF 1   \n",
-       "1                 ST V PERCY LEE BENNETT   1:30 PM   1 OF 1   \n",
-       "2              ST V BRITTANY NICOLE ROSE   1:30 PM   1 OF 1   \n",
-       "0  ST V NICOLE MARIE MILLER-POLKINGHORNE   9:00 AM   1 OF 1   \n",
-       "1                   ST V DYLAN T DEPTULA   1:30 PM   1 OF 1   \n",
-       "2           ST V HARRY BERNARD SCHIEN IV   9:00 AM   1 OF 1   \n",
-       "0               ST V JEFFREY CALVIN HILL   8:30 AM   1 OF 1   \n",
-       "1                      ST V SEAN D. GWIN   8:30 AM   1 OF 1   \n",
-       "2               ST V JULIANNE MARIE POPE   9:00 AM   1 OF 1   \n",
-       "3           ST V BRIAN KEITH BILLINGSLEY   1:30 PM   1 OF 1   \n",
-       "4                   ST V MARLA A.M. NEIL   8:30 AM   1 OF 1   \n",
-       "5                   ST V CARLOS L. SPANN   8:30 AM   1 OF 1   \n",
-       "6               ST V JULIANNE MARIE POPE   9:00 AM   1 OF 1   \n",
-       "\n",
-       "                      event  \\\n",
-       "0      Preliminary Hearing    \n",
-       "1      Disposition Hearing    \n",
-       "2      Preliminary Hearing    \n",
-       "0  Bond Appearance Hearing    \n",
-       "1      Preliminary Hearing    \n",
-       "2   Counsel Status Hearing    \n",
-       "0             Plea Hearing    \n",
-       "1      Disposition Hearing    \n",
-       "2       Sentencing Hearing    \n",
-       "3     Pre-trial Conference    \n",
-       "4      Disposition Hearing    \n",
-       "5              Arraignment    \n",
-       "6             Plea Hearing    \n",
-       "\n",
-       "                                            location  \\\n",
-       "0  Location: DIVISION 10 COURTROOM St Charles Cir...   \n",
-       "1  Location: DIVISION 10 COURTROOM St Charles Cir...   \n",
-       "2  Location: DIVISION 10 COURTROOM St Charles Cir...   \n",
-       "0  Location: DIVISION 2 COURTROOM St Charles Circ...   \n",
-       "1  Location: DIVISION 9 COURTROOM St Charles Circ...   \n",
-       "2  Location: DIVISION 9 COURTROOM St Charles Circ...   \n",
-       "0  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
-       "1  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
-       "2  Location: DIVISION 7 COURTROOM St Charles Circ...   \n",
-       "3  Location: DIVISION 7 COURTROOM St Charles Circ...   \n",
-       "4  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
-       "5  Location: DIVISION 4 COURTROOM St Charles Circ...   \n",
-       "6  Location: DIVISION 7 COURTROOM St Charles Circ...   \n",
-       "\n",
-       "                                         judge  \n",
-       "0        Judge/Commissioner: NORMAN C STEIMEL   \n",
-       "1        Judge/Commissioner: NORMAN C STEIMEL   \n",
-       "2         Judge/Commissioner: NORMAN C STEIMEL  \n",
-       "0     Judge/Commissioner: DEBORAH JEAN ALESSI   \n",
-       "1  Judge/Commissioner: ELIZABETH WALKER SWANN   \n",
-       "2   Judge/Commissioner: ELIZABETH WALKER SWANN  \n",
-       "0    Judge/Commissioner: MICHAEL JAMES FAGRAS   \n",
-       "1    Judge/Commissioner: MICHAEL JAMES FAGRAS   \n",
-       "2        Judge/Commissioner: DANIEL G PELIKAN   \n",
-       "3        Judge/Commissioner: DANIEL G PELIKAN   \n",
-       "4     Judge/Commissioner: MICHAEL JAMES FAGRAS  \n",
-       "5     Judge/Commissioner: MICHAEL JAMES FAGRAS  \n",
-       "6         Judge/Commissioner: DANIEL G PELIKAN  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>case_num</th>\n",
-       "      <th>case_style</th>\n",
-       "      <th>time</th>\n",
-       "      <th>days</th>\n",
-       "      <th>event</th>\n",
-       "      <th>location</th>\n",
-       "      <th>judge</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Thursday, August 19, 2021</td>\n",
-       "      <td>1911-CR01411</td>\n",
-       "      <td>ST V BRITTANY N ROSE</td>\n",
-       "      <td>1:30 PM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Preliminary Hearing</td>\n",
-       "      <td>Location: DIVISION 10 COURTROOM St Charles Cir...</td>\n",
-       "      <td>Judge/Commissioner: NORMAN C STEIMEL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Thursday, August 19, 2021</td>\n",
-       "      <td>2011-CR04156</td>\n",
-       "      <td>ST V PERCY LEE BENNETT</td>\n",
-       "      <td>1:30 PM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Disposition Hearing</td>\n",
-       "      <td>Location: DIVISION 10 COURTROOM St Charles Cir...</td>\n",
-       "      <td>Judge/Commissioner: NORMAN C STEIMEL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Thursday, August 19, 2021</td>\n",
-       "      <td>1911-CR03589</td>\n",
-       "      <td>ST V BRITTANY NICOLE ROSE</td>\n",
-       "      <td>1:30 PM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Preliminary Hearing</td>\n",
-       "      <td>Location: DIVISION 10 COURTROOM St Charles Cir...</td>\n",
-       "      <td>Judge/Commissioner: NORMAN C STEIMEL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Wednesday, August 18, 2021</td>\n",
-       "      <td>1611-CR03626-01</td>\n",
-       "      <td>ST V NICOLE MARIE MILLER-POLKINGHORNE</td>\n",
-       "      <td>9:00 AM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Bond Appearance Hearing</td>\n",
-       "      <td>Location: DIVISION 2 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: DEBORAH JEAN ALESSI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Wednesday, August 18, 2021</td>\n",
-       "      <td>2011-CR00837</td>\n",
-       "      <td>ST V DYLAN T DEPTULA</td>\n",
-       "      <td>1:30 PM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Preliminary Hearing</td>\n",
-       "      <td>Location: DIVISION 9 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: ELIZABETH WALKER SWANN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Wednesday, August 18, 2021</td>\n",
-       "      <td>1911-CR04606</td>\n",
-       "      <td>ST V HARRY BERNARD SCHIEN IV</td>\n",
-       "      <td>9:00 AM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Counsel Status Hearing</td>\n",
-       "      <td>Location: DIVISION 9 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: ELIZABETH WALKER SWANN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Monday, August 16, 2021</td>\n",
-       "      <td>1911-CR01190-01</td>\n",
-       "      <td>ST V JEFFREY CALVIN HILL</td>\n",
-       "      <td>8:30 AM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Plea Hearing</td>\n",
-       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Monday, August 16, 2021</td>\n",
-       "      <td>1911-CR01457-01</td>\n",
-       "      <td>ST V SEAN D. GWIN</td>\n",
-       "      <td>8:30 AM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Disposition Hearing</td>\n",
-       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Monday, August 16, 2021</td>\n",
-       "      <td>1811-CR03256-01</td>\n",
-       "      <td>ST V JULIANNE MARIE POPE</td>\n",
-       "      <td>9:00 AM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Sentencing Hearing</td>\n",
-       "      <td>Location: DIVISION 7 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: DANIEL G PELIKAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Monday, August 16, 2021</td>\n",
-       "      <td>1911-CR02239-01</td>\n",
-       "      <td>ST V BRIAN KEITH BILLINGSLEY</td>\n",
-       "      <td>1:30 PM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Pre-trial Conference</td>\n",
-       "      <td>Location: DIVISION 7 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: DANIEL G PELIKAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Monday, August 16, 2021</td>\n",
-       "      <td>1911-CR01436-01</td>\n",
-       "      <td>ST V MARLA A.M. NEIL</td>\n",
-       "      <td>8:30 AM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Disposition Hearing</td>\n",
-       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Monday, August 16, 2021</td>\n",
-       "      <td>2011-CR02440-01</td>\n",
-       "      <td>ST V CARLOS L. SPANN</td>\n",
-       "      <td>8:30 AM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Arraignment</td>\n",
-       "      <td>Location: DIVISION 4 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: MICHAEL JAMES FAGRAS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Monday, August 16, 2021</td>\n",
-       "      <td>2011-CR00723-01</td>\n",
-       "      <td>ST V JULIANNE MARIE POPE</td>\n",
-       "      <td>9:00 AM</td>\n",
-       "      <td>1 OF 1</td>\n",
-       "      <td>Plea Hearing</td>\n",
-       "      <td>Location: DIVISION 7 COURTROOM St Charles Circ...</td>\n",
-       "      <td>Judge/Commissioner: DANIEL G PELIKAN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 44
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
